--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "forever": "^3.0.2",
     "os-utils": "0.0.14",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "node-pty":"^0.9.0"
   }
 }
