--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./runtime.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,15 @@
   },
   "homepage": "https://github.com/ryzbaka/PyLotHealthReportingServicePayload#readme",
   "dependencies": {
-    "forever": "^3.0.2",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "forever": "^3.0.4",
+    "node-pty": "^0.9.0",
     "os-utils": "0.0.14",
-    "socket.io": "^2.3.0",
-    "node-pty":"^0.9.0"
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
